force-app/main/default/objects/CineLog_Config__mdt/CineLog_Config__mdt.object-meta.xml
<CustomObject>
    <description>Stores API keys and config for CineLog app</description>
    <label>CineLog Config</label>
    <pluralLabel>CineLog Configs</pluralLabel>
</CustomObject>