force-app/main/default/objects/CineLog_Config__mdt/fields/Gemini_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Gemini_API_Key__c</fullName>
    <label>Gemini API Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>