force-app/main/default/objects/CineLog_Config__mdt/fields/Gemini_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Gemini_Base_URL__c</fullName>
    <label>Gemini Base URL</label>
    <type>Url</type>
</CustomField>