force-app/main/default/objects/CineLog_Config__mdt/fields/TMDB_API_Key__c.field-meta.xml
<CustomField>
    <fullName>TMDB_API_Key__c</fullName>
    <label>TMDB API Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>