force-app/main/default/objects/CineLog_Config__mdt/fields/TMDB_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>TMDB_Base_URL__c</fullName>
    <label>TMDB Base URL</label>
    <type>Url</type>
</CustomField>